--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,22 @@ pymysql
 python-dotenv==1.0.0
 Unidecode==1.3.6
 pandas
+
+Werkzeug==2.3.7
+jinja2==3.1.2
+flask-login
+flask_migrate==4.0.4
+WTForms==3.0.1
+flask_wtf==1.2.1
+flask-sqlalchemy==3.0.5
+email_validator==2.0.0
+flask-restx==1.1.0
+
+## python-dotenv==0.19.2
+python-dotenv
+
+Flask-Minify==0.37
+
+flask-dance==7.0.0
+blinker==1.6.2
+#flask_mysqldb
