added some env variables

--- a/.env
+++ b/.env
@@ -3,5 +3,21 @@ DB_HOST_DEV=incriveis_forms_db
 DB_HOST=incriveis_forms_db
 DB_PORT=3306
 DB_NAME=incriveis_forms
-DB_USER=root
-DB_PASSWORD=123123
+DB_USERNAME=root
+DB_PASS=123123
+DB_ENGINE=mysql
+
+## session settings
+PERMANENT_SESSION_LIFETIME=300 # 5 minutes
+
+## debug settings
+DEBUG=False
+
+# Flask ENV
+FLASK_APP=main.py
+FLASK_DEBUG=1
+
+# If not provided, a random one is generated
+# SECRET_KEY=<YOUR_SUPER_KEY_HERE>
+
+ASSETS_ROOT=/static/assets
